FIX - Table tweaks, prevent text-wrapping in vertical table headers

--- a/src/components/Table/styles.css
+++ b/src/components/Table/styles.css
@@ -81,6 +81,7 @@
       text-align: left;
       vertical-align: top;
       padding-left: 0 !important;
+      white-space: nowrap;
     }
   }
 
